Fix/overflow fix (#8)
* fix footer and header overflow

* fix login height and anchor

* fix register height and anchor

* remove footer width

* fix overflow on home page

* remove random padding from view profile page

--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -1,11 +1,11 @@
 @import "../../../styles.scss";
 
 .login-container {
+  @include flex();
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  height: 87vh;
 }
 h2 {
   color: white;
