--- a/src/app/authentication/register/register.component.scss
+++ b/src/app/authentication/register/register.component.scss
@@ -1,13 +1,12 @@
 @import "../../../styles.scss";
 
 .register-container {
+  @include flex();
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
-  margin-bottom: 100px;
   text-align: center;
   color: white;
+  height: 87vh;
 }
 
 h2 {
