--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,12 +5,10 @@
 .app-footer {
   background-color: $secondary-color; // Use your secondary color
   color: $primary-color;
-  padding: 1rem;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
   text-align: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
+  height: 4vh;
 
   a {
     color: $accent_color;
@@ -22,7 +20,8 @@
   }
 
   .container {
-    max-width: 1140px;
+    height: 100%;
+    max-width: 100vw;
     margin: auto;
     padding: 0 15px;
   }
